--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@
 # npm install -g markdown-link-check
 repos:
 - repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.81.0
+  rev: v1.83.5
   hooks:
     #- id: infracost_breakdown
     - id: terraform_fmt
@@ -18,14 +18,14 @@ repos:
     - id: terraform_tflint
     - id: terraform_tfsec
     - id: terraform_checkov
-    - id: terrascan
-      args:
-      - --args=-"-non-recursive"
-      - --args="-v"
-      #- --args="-c .terrascan.toml"
+    #- id: terrascan
+    #  args:
+    #  - --args=-"-non-recursive"
+    #  - --args="-v"
+    #  #- --args="-c .terrascan.toml"
     #- id: tfupdate
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v4.5.0
   hooks:
     - id: check-case-conflict
     - id: check-executables-have-shebangs
